# tapservice

./: .gitignore  manage.py  pyproject.toml
Serializers/: serializers.py
api/: admin.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_initial.py
authentication/: models.py  urls.py  utils.py  views.py
authentication/management/commands/: create_superuser.py
authentication/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_full_name.py  0004_otp.py
tapservice/: asgi.py  settings.py  urls.py  wsgi.py
templates/emails/: otp.html
